fix main title line height on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -341,6 +341,7 @@
 
   #main-title {
     font-size: 48px;
+    line-height: 48px;
   }
 
   #center-sub-text {
